--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <!-- Produk A -->
         <div class="col">
           <div class="card produk-card h-100">
-            <img src="/images/pisang.jpg" class="card-img-top" alt="Produk A">
+            <img src="images/pisang.jpg" class="card-img-top" alt="Produk A">
             <div class="card-body text-center">
               <h5 class="card-title">Pisang segar</h5>
               <p class="card-text">✔️ berkualitas premium <br> ✔️ rasa nikmat <br> <span style="font-style: italic; color: red;">Rp.10.000 per sisir</span></p>
@@ -73,7 +73,7 @@
         <!-- Produk B -->
         <div class="col">
           <div class="card produk-card h-100">
-            <img src="/images/jeruk.webp" class="card-img-top" alt="Produk B">
+            <img src="images/jeruk.webp" class="card-img-top" alt="Produk B">
             <div class="card-body text-center">
               <h5 class="card-title">Jeruk Nipis</h5>
               <p class="card-text">✔️ berkualitas premium <br> ✔️ asem segar <br> <span style="font-style: italic; color: red;">Rp.10.000 per 1/2 kilo</span></p>
@@ -85,7 +85,7 @@
         <!-- Produk C -->
         <div class="col">
           <div class="card produk-card h-100">
-            <img src="/images/anggur.webp" class="card-img-top" alt="Produk C">
+            <img src="images/anggur.webp" class="card-img-top" alt="Produk C">
             <div class="card-body text-center">
               <h5 class="card-title">Anggur</h5>
               <p class="card-text">✔️ manis dan enak <br> ✔️ buah masih segar <br> <span style="font-style: italic; color: red;">Rp.10.000 per ikat</span></p>
@@ -104,7 +104,7 @@
         <!-- Produk A -->
         <div class="col">
           <div class="card produk-card h-100">
-            <img src="/images/apel.webp" class="card-img-top" alt="Produk A">
+            <img src="images/apel.webp" class="card-img-top" alt="Produk A">
             <div class="card-body text-center">
               <h5 class="card-title">Apel Merah Segar</h5>
               <p class="card-text">
@@ -120,7 +120,7 @@
         <!-- Produk B -->
         <div class="col">
           <div class="card produk-card h-100">
-            <img src="/images/durian.png" class="card-img-top" alt="Produk B">
+            <img src="images/durian.png" class="card-img-top" alt="Produk B">
             <div class="card-body text-center">
               <h5 class="card-title">Durian Montong</h5>
 <p class="card-text">
@@ -136,7 +136,7 @@
         <!-- Produk C -->
         <div class="col">
           <div class="card produk-card h-100">
-            <img src="/images/mangga.webp" class="card-img-top" alt="Produk C">
+            <img src="images/mangga.webp" class="card-img-top" alt="Produk C">
             <div class="card-body text-center">
               <h5 class="card-title">Mangga Harum Manis</h5>
 <p class="card-text">
@@ -160,7 +160,7 @@
         <!-- Produk A -->
         <div class="col">
           <div class="card produk-card h-100">
-            <img src="/images/manggis.jpg" class="card-img-top" alt="Produk A">
+            <img src="images/manggis.jpg" class="card-img-top" alt="Produk A">
             <div class="card-body text-center">
               <h5 class="card-title">Manggis Segar</h5>
 <p class="card-text">
@@ -177,7 +177,7 @@
         <!-- Produk B -->
         <div class="col">
           <div class="card produk-card h-100">
-            <img src="/images/pepaya.webp" class="card-img-top" alt="Produk B">
+            <img src="images/pepaya.webp" class="card-img-top" alt="Produk B">
             <div class="card-body text-center">
               <h5 class="card-title">Pepaya California</h5>
 <p class="card-text">
@@ -194,7 +194,7 @@
         <!-- Produk C -->
         <div class="col">
           <div class="card produk-card h-100">
-            <img src="/images/semangka.webp" class="card-img-top" alt="Produk C">
+            <img src="images/semangka.webp" class="card-img-top" alt="Produk C">
             <div class="card-body text-center">
               <h5 class="card-title">Semangka Merah</h5>
 <p class="card-text">
